casting problem in python

--- a/intqos/static/net_conf_templates/global_netflow_config.j2
+++ b/intqos/static/net_conf_templates/global_netflow_config.j2
@@ -13,7 +13,7 @@ collect application name
 
 flow exporter IQoSExporter 
 destination {{kwargs.get('destination')}}
-source {{self.loopback_address}}
+source {{self.loopback_addr}}
 transport udp {{kwargs.get('port','2055')}}
 export-protocol netflow-v9
 template data timeout {{kwargs.get('template_data_timeout','60')}}
